15 September 2004 Sylvain Pion
- Add sqrt() for leda_integer and leda_bigfloat.

10 September 2004 Andreas Fabri
- yet another change in operator>>(iostrem&, Gmpz) as it still failed with VC7.1

6 September 2004 Menelaos Karavelas
- number_type_basic.h: added "#include<CGAL/_QP_solver/Double.h>"

5 September 2004 Menelaos Karavelas & Sylvain Pion
- added specs for the new number type tags: Has_exact_ring_operations,
  Has_exact_division, Has_exact_sqrt

5 September 2004 Menelaos Karavelas
- number_type_basic.h: put declarations for GMP, GMPXX and CORE inside
  the proper #ifdef CGAL_USE_* / #endif blocks

4 September 2004 Sylvain Pion
- Add UInteger64 again.

3 September 2004 Sylvain Pion
- Quotient.h : #include <CGAL/basic.h> before the protect macro.

3 September 2004 Sylvain Pion & Menelaos Karavelas
- resurect to_double(Quotient<Gmpz>).

2 September 2004 Menelaos Karavelas
- number_types_basic.h: added "#include <CGAL/MP_Float.h>"; needed for
  specializations of Quotient

2 September 2004 Menelaos Karavelas
- removed occurences of CGAL_USE_ADL_FOR_NT
- number_types_basic.h: added declarations for CORE::Expr

2 September 2004 Sylvain Pion
- test for the precense of the Number_type_traits tags.

2 September 2004 Sylvain Pion & Menelaos Karavelas
- number_type_basic.h :
  - Replace #includes by declarations (for g++ 3.4).
  - added declarations for specializations for Quotient<MP_Float>
  - added includes for Gmpz.h and Quotient.h, necessary for g++ 3.4
- Gmp.C : file removed and corresponding code was moved back to Gmpz.h

1 September 2004 Sylvain Pion
- Add missing #include <CGAL/Quotient.h> in src/MP_Float.C.

1 September 2004 Menelaos Karavelas
- added the following tags in number type traits: Has_exact_sqrt,
  Has_exact_ring_operations, Has_exact_division
- created default Rational_traits and moved applied the old rational
  traits to Quotient<NT>
- removed unsigned number types

1 September 2004 Sylvain Pion